[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/RedButton.png" type="Texture" id=2]
[ext_resource path="res://scenes/menues/GameMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
color = Color( 0.2, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1

[node name="Control" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="ResumeButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Control/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -12.0
margin_right = 140.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 280.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="QuitButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Control2"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Control2/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -12.0
margin_right = 140.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
